When possible, distribute min width of colspanning cells so it fits within the pref width of the spanned columns.  b=363144  r=bernd  sr=bzbarsky